# epimodels

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  OpenCode.md  Pipfile  README.md  README.rst  compare_sir_neipel.py  compare_sir_neipel_v2.py  pyproject.toml  requirements.txt  run_SIRaut.py  run_sir.py  setup.cfg  setup.py  teste_neipel.py
.github/workflows/: python-package.yml  python-publish.yml
.mypy_cache/3.6/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  functools.data.json  functools.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  models.data.json  models.meta.json  pkg_resources.data.json  pkg_resources.meta.json  pkgutil.data.json  pkgutil.meta.json  posix.data.json  posix.meta.json  setup.data.json  setup.meta.json  string.meta.json  sys.data.json  sys.meta.json  test_continuous_models.data.json  test_continuous_models.meta.json  test_discrete_models.data.json  test_discrete_models.meta.json  threading.meta.json  time.data.json  time.meta.json  (+8 more)
.mypy_cache/3.6/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.6/epimodels/: __init__.data.json  __init__.meta.json
.mypy_cache/3.6/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  util.data.json  util.meta.json
.mypy_cache/3.6/logging/: __init__.meta.json
condarecipe/epimodels/: meta.yaml
docs/: Makefile  conf.py  fitting.rst  geting_started.rst  index.rst  models.rst  requirements.txt  solvers.rst  validation_system.md  validation_system.rst
docs/Examples/: API_features.ipynb  Advanced_Analytics.ipynb  Continuous_models.ipynb  Discrete_models.ipynb  Model_Fitting.ipynb  Phase_space_analysis.ipynb  SIRS_Nonautonomous_Example.ipynb  SIRS_parameter_inference.ipynb  SISLogistic_fitting.ipynb  SISLogistic_fitting_real_data.ipynb  Validation_Framework.ipynb  dengue_data_logistic.csv  neipel_heterogeneous_sir_example.ipynb
epimodels/: __init__.py  exceptions.py  formulas.py  solvers.py
epimodels/continuous/: __init__.py  models.py
epimodels/discrete/: __init__.py  models.py
epimodels/exporters/: __init__.py  vfgen.py
epimodels/fitting/: __init__.py  base.py  data.py  exceptions.py  objectives.py  optimizers.py  utils.py
epimodels/tools/: __init__.py  phase.py
epimodels/validation/: README.md  __init__.py  specs.py  symbolic.py  validators.py
examples/: rich_validation_example.py
src/epimodels/: __init__.py  covid.py  skeleton.py
tests/: conftest.py  test_api.py  test_base.py  test_continuous_models.py  test_discrete_models.py  test_fitting.py  test_formulas.py  test_new_continuous_models.py  test_numerical.py  test_phase.py  test_rich_validation.py  test_skeleton.py  test_solvers.py  test_symbolic_advanced.py  test_validation.py  test_vfgen_export.py
(+40 files in other folders)
