[project]
name = "epimodels"
version = "0.4.1"
description = "Library of mathematical epidemic models for use in simulation studies and inference."
authors = [
    {name="Flávio Codeço Coelho",  email = "fccoelho@gmail.com"}
]
readme = "README.md"
classifiers = [
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.11",
    "latexify-py>=0.4.3.post1",
    "matplotlib>=3.10.0",
    "mypy>=1.13.0",
    "numpy>=2.2.0",
    "scipy>=1.14.1",
    "sphinx>=8.1.3",
    "sympy>=1.13.3",
]
packages = ["epimodels"]

[project.urls]
Homepage = "https://github.com/fccoelho/epimodels"
Documentation = "https://epimodels.readthedocs.io"


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
]
