[project]
name = "epimodels"
version = "1.0.0"
description = "Library of mathematical epidemic models for use in simulation studies and inference."
authors = [
    {name="Flávio Codeço Coelho",  email = "fccoelho@gmail.com"}
]
readme = "README.md"
classifiers = [
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.7.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
]

[project.optional-dependencies]
dataframe = ["pandas>=2.0.0"]
dev = [
    "cython>=3.0.11",
    "marimo>=0.13.10",
    "mypy>=1.13.0",
    "nbsphinx>=0.9.6",
    "notebook>=7.4.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
    "sphinx>=8.1.3",
    "sphinxcontrib-mermaid>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/fccoelho/epimodels"
Documentation = "https://epimodels.readthedocs.io"

[tool.setuptools]
packages = ["epimodels"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
